# speranza

./: .gitignore  Cargo.toml  LICENSE  README.md  data.json  flake.nix  make_graphs.py  rust-toolchain.toml  sizes.csv
benches/: api_benches.rs
diagrams/: cert_issue.dot  parties.dot  proof_gen.dot
src/: api.rs  lib.rs  repo.rs  tests.rs
src/certificate/: authority.rs  bundle.rs  data.rs  fixed.rs  mod.rs  predicate.rs  types.rs
src/cocommitments/: ca.rs  mod.rs  signer.rs  tests.rs  verifier.rs
src/commitments/: insecure.rs  mod.rs  pedersen.rs  scheme.rs
src/maps/: insecure.rs  interface.rs  merkle_bpt.rs  mod.rs  tests.rs
src/policy/: basic.rs  cocommitments.rs  history.rs  identity.rs  mod.rs
src/signature/: envelope.rs  fixed.rs  mod.rs  signer.rs  verifier.rs
src/util/: bit_twiddling.rs  canonicalize.rs  mod.rs  size.rs
