[package]
name = "speranza"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.40"
signature = "1.6.4"
curve25519-dalek = "3.2.1"
ed25519-dalek = "1.0.1"
derivative = "2.2.0"
digest = "0.9.0"
sha2 = "0.9.0"
rand = "0.7.0"

[dev-dependencies]
proptest = "1.1.0"
proptest-derive = "0.3.0"
criterion = { version = "0.4.0", features = [ "html_reports", "csv" ] }
anyhow = "1.0.71"

[[bench]]
name = "api_benches"
autobenches = false
harness = false

[[bin]]
name = "sizes"
